# EulerOMR

./: .gitignore  CONTRIBUTING.md  EulerOMR.spec  LICENSE  README.md  SECURITY.md  main.py  prompt.json  pyproject.toml  reporttemplate.tex  requirements-dev.txt  requirements.txt  template.tex
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
brain/0e286eae-62ab-4e36-a982-79d00aee7b20/scratch/: test_pdflatex.py  test_pytinytex_compile.py  test_real_template.py
euler_omr/: __init__.py  app.py  config.py  constants.py  logger.py
euler_omr/core/: analysis.py  grader.py  latex_check.py  path_utils.py  report_builder.py  scan_reader.py  sound_manager.py  template_compiler.py  updater.py  xlsx_exporter.py
euler_omr/file_io/: __init__.py  eomrp_handler.py  eomrt_handler.py
euler_omr/models/: answer_key.py  project_model.py  scan_result.py  template_model.py
euler_omr/ui/: fonts.py  main_window.py  style.py
euler_omr/ui/dialogs/: answer_key_dialog.py  review_page_dialog.py  tinytex_dialog.py  unsaved_changes_dialog.py  update_dialog.py  wizard_fixer_dialog.py
euler_omr/ui/tabs/: project_tab.py  template_tab.py  welcome_tab.py
euler_omr/ui/widgets/: bubble_crop_view.py  image_preview.py  log_panel.py  progress_overlay.py
euler_omr/workers/: base_worker.py  compile_worker.py  grade_worker.py  scan_worker.py
scripts/: build_dist.py  generate_real_scans.py  installer_setup.iss  screenshots.py
tests/: test_file_io.py  test_grader.py  test_scan_reader.py  test_template_compiler.py
